# research-main-xr

./: .gitignore  README.md  index.ipynb  pyproject.toml  requirements.txt
mxrmd_jax/: eval_gym.py  train_jax.py
mxrmd_jax/adapters/: pettingzoo_adapter_stub.py  pynn_stub.py
mxrmd_jax/driver/: avg_reward_ac.py  model_flax.py
mxrmd_jax/envs/: craftax_survival_gym.py  fruitbot_survival_gym.py
mxrmd_jax/logging/: rlds_jsonl.py
