[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "main-xr-md-jax-phase0"
version = "0.1.0"
description = "MAIN-XR-MD Phase-0 JAX driver with Gymnasium outward API, Gymnax/Craftax inner stepping, RLDS-lite logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "flax>=0.8.2",
    "optax>=0.2.3",
    "chex>=0.1.86",
    "gymnasium>=0.29.1",
    "gymnax>=0.0.8",
    "craftax>=0.1.3",
    "orjson>=3.10.0",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
procgen = ["procgen>=0.10", "gym3>=0.3.3"]
marl = ["pettingzoo>=1.24.3"]
envpool = ["envpool>=0.8.0"]
dev = ["pytest>=7.4", "ruff>=0.5.0", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["mxrmd_jax"]
